fixed scrollbar of death

--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -2,12 +2,12 @@
     position: relative;
 }
 
-.headerContainer {
+ .headerContainer {
     padding:0px;
     margin:0px;
     background:linear-gradient(0deg,rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url("https://images.unsplash.com/photo-1491956175078-460aea0914ca?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&w=1550&q=80") center center;
     background-size:cover;
-    width:100vw;
+    width:99vw;
     height:100vh;
     display: flex;
     justify-content: center;
@@ -15,7 +15,7 @@
     font-family: 'Josefin Sans', sans-serif;
 }
 
-.headerContent {
+ .headerContent {
     display:flex;
     flex-direction:column;
     justify-content:center;
@@ -52,4 +52,4 @@
         font-size: 3rem;
 
     }
- }
+ }  
